Ma classe est faite (et j'ai ajouté l'interface CostFunction). Il y a simplement un conseil de programmation dont je n'ai pas compris l'utilité (voir annotations).